k8s/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: etolv-multi-service-portal-app
          imagePullPolicy: Never
          ports:
            - containerPort: 80
