k8s/acc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acc-service
spec:
  selector:
    app: acc
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
