k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etolv-ingress
spec:
  rules:
    - host: etolv.local
      http:
        paths:
          - path: /acc
            pathType: Prefix
            backend:
              service:
                name: acc-service
                port:
                  number: 80
          - path: /portal
            pathType: Prefix
            backend:
              service:
                name: portal-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
